# optimacros

./: README.md  main.py  pyproject.toml  task.txt
domain/models/: calculator.py
infrastructure/: utils.py
infrastructure/dto/: factorial.py
infrastructure/providers/: base.py  http.py
tests/integration/: test_websocket.py
tests/unit/: test_factorial.py
