[tool.poetry]
name = "opti"
version = "0.1.0"
description = ""
authors = ["tinkml <1996ntishenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
pytest = "^7.2.2"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
